fix: fixed directory deletion and tab shift

--- a/src/components/Sidebar/Toolbar/Toolbar.scss
+++ b/src/components/Sidebar/Toolbar/Toolbar.scss
@@ -3,6 +3,7 @@
 	cursor: pointer;
 	transition: all .2s;
 	opacity: .8;
+	width: 20px;
 
 	&:hover {
 		opacity: 1;
